--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="logo">Barbearia </div>
     <nav class="menu">
       <ul>
-        <li><a href="#inicio">Início</a></li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#profissionais">Profissionais</a></li>
-        <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="menu/sobre/sobre.html">Sobre</a></li>
+        <li><a href="menu/prof/prof.html">Profissionais</a></li>
+        <li><a href="menu/serv/serv.html">Serviços</a></li>
+        <li><a href="menu/redes/redes.html">Redes Sociais</a></li>
       </ul>
     </nav>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
