--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="logo">Barbearia </div>
     <nav class="menu">
       <ul>
-        <li><a href="index.html">Início</a></li>
+        <li><a href="index.html" class="active">Início</a></li>
         <li><a href="menu/sobre/sobre.html">Sobre</a></li>
         <li><a href="menu/prof/prof.html">Profissionais</a></li>
         <li><a href="menu/serv/serv.html">Serviços</a></li>
