--- a/menu/redes/redes.html
+++ b/menu/redes/redes.html
@@ -16,6 +16,7 @@
         <li><a href="../sobre/sobre.html">Sobre</a></li>
         <li><a href="../prof/prof.html">Profissionais</a></li>
         <li><a href="../serv/serv.html">Serviços</a></li>
+        <li><a href="redes.html" class="active">Redes</a></li>
       </ul>
     </nav>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
