--- a/menu/sobre/sobre.html
+++ b/menu/sobre/sobre.html
@@ -13,6 +13,7 @@
     <nav class="menu">
       <ul>
         <li><a href="../../index.html">Início</a></li>
+        <li><a href="sobre.html" class="active">Sobre</a></li>
         <li><a href="../prof/prof.html">Profissionais</a></li>
         <li><a href="../serv/serv.html">Serviços</a></li>
         <li><a href="../redes/redes.html">Redes Sociais</a></li>
