--- a/menu/prof/prof.html
+++ b/menu/prof/prof.html
@@ -14,6 +14,7 @@
       <ul>
         <li><a href="../../index.html">Início</a></li>
         <li><a href="../sobre/sobre.html">Sobre</a></li>
+        <li><a href="prof.html" class="active">Profissionais</a></li>
         <li><a href="../serv/serv.html">Serviços</a></li>
         <li><a href="../redes/redes.html">Redes Sociais</a></li>
       </ul>
