--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Barbearia Azul</title>
+  <title>Barbearia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <div class="logo">Barbearia </div>
+    <div class="iconPole">
+      <img src="icons/icon-barbeiro.png" alt="icon">
+    </div>
+    <div class="logo"> Barbearia </div>
     <nav class="menu">
       <ul>
         <li><a href="index.html" class="active">Início</a></li>
