--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <header>
-    <div class="iconPole">
-      <img src="icons/icon-barbeiro.png" alt="icon">
+    <div class="logo-container">
+      <div class="iconPole">
+        <img src="icons/icon-barbeiro.png" alt="icon">
+      </div>
+      <div class="logo"> Barbearia </div>
     </div>
-    <div class="logo"> Barbearia </div>
     <nav class="menu">
       <ul>
         <li><a href="index.html" class="active">Início</a></li>
