--- a/menu/redes/redes.html
+++ b/menu/redes/redes.html
@@ -16,7 +16,7 @@
         <li><a href="../sobre/sobre.html">Sobre</a></li>
         <li><a href="../prof/prof.html">Profissionais</a></li>
         <li><a href="../serv/serv.html">Serviços</a></li>
-        <li><a href="redes.html" class="active">Redes</a></li>
+        <li><a href="redes.html" class="active">Redes Sociais</a></li>
       </ul>
     </nav>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
@@ -24,12 +24,41 @@
 
   <!-- Conteúdo principal -->
   <main>
-    <section class="content">
-      <h1>Quase pronto! 🤑</h1>
-      <p>Este é um modelo de página que você pode usar para qualquer seção do site.  
-      Substitua este texto pelo conteúdo específico de cada página.</p>
-    </section>
-  </main>
+  <section class="content">
+    <h1>Siga-nos nas Redes Sociais!</h1>
+    <p>
+      Fique por dentro das novidades, promoções e trabalhos incríveis da
+      nossa barbearia!
+    </p>
+
+    <div class="social-media-container">
+      <a
+        href="URL_DO_FACEBOOK"
+        target="_blank"
+        class="social-icon"
+        aria-label="Link para o Facebook"
+      >
+        <img src="../../icons/icon-instagram.png" alt="Ícone do Instagram" />
+      </a>
+      <a
+        href="URL_DO_INSTAGRAM"
+        target="_blank"
+        class="social-icon"
+        aria-label="Link para o Instagram"
+      >
+        <img src="../../icons/icon-facebook.png" alt="Ícone do Facebook" />
+      </a>
+      <a
+        href="URL_DO_WHATSAPP"
+        target="_blank"
+        class="social-icon"
+        aria-label="Link para o WhatsApp"
+      >
+        <img src="../../icons/icon-whatsapp.png" alt="Ícone do WhatsApp" />
+      </a>
+      </div>
+  </section>
+</main>
 
   <!-- Rodapé -->
   <footer>
