--- a/menu/prof/prof.html
+++ b/menu/prof/prof.html
@@ -21,7 +21,10 @@
     </nav>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
   </header>
-
+<br>
+<br>
+<br>
+<main>
   <!-- Conteúdo principal -->
   <div class="testemunhos">
         <section class="testemunhos">
@@ -48,6 +51,7 @@
           </div>
           
         </section>
+</main>
 
   <!-- Rodapé -->
   <footer>
