--- a/menu/serv/serv.html
+++ b/menu/serv/serv.html
@@ -15,7 +15,7 @@
         <li><a href="../../index.html">Início</a></li>
         <li><a href="../sobre/sobre.html">Sobre</a></li>
         <li><a href="../prof/prof.html">Profissionais</a></li>
-        <li><a href="servicos.html" class="active">Serviços</a></li>
+        <li><a href="serv.html" class="active">Serviços</a></li>
         <li><a href="../redes/redes.html">Redes Sociais</a></li>
       </ul>
     </nav>
