--- a/menu/prof/prof.html
+++ b/menu/prof/prof.html
@@ -21,27 +21,27 @@
     </nav>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
   </header>
-  
+
 <main class="content">     <section class="testemunhos">
 
         <div class="textoComImagem textoDireita">
             <img src="profissionais/icon-pessoa.png" alt="pessoa">
             <div class="texto">
-            <p><b> Lucas </b><br><br><strong> Cortes tradicionais com tesoura, barba à navalha, penteados clássicos e finalizações com pomadas modeladoras. </strong></p>
+            <p><b><h3><i> Lucas </i></h3></b><br><strong> Cortes tradicionais com tesoura, barba à navalha, penteados clássicos e finalizações com pomadas modeladoras. </strong></p>
             </div>
         </div>
       
         <div class="textoComImagem textoEsquerda">
             <img src="profissionais/icon-pessoa.png" alt="pessoa">
             <div class="texto">
-            <p><b> Rafael </b><br><br><strong> Degradês (fade), cortes undercut, desenhos artísticos no cabelo e coloração masculina. </strong></p>
+            <p><b><h3><i> Rafael </i></h3></b><br><strong> Degradês (fade), cortes undercut, desenhos artísticos no cabelo e coloração masculina. </strong></p>
             </div>
         </div>
       
         <div class="textoComImagem textoDireita">
             <img src="profissionais/icon-pessoa.png" alt="pessoa">
             <div class="texto">
-            <p><b> Gustavo </b><br><br><strong> Barbas modeladas, alinhamento de fios, cortes premium e tratamentos faciais masculinos. </strong></p>
+            <p><b><h3><i> Gustavo </i></h3></b><br><strong> Barbas modeladas, alinhamento de fios, cortes premium e tratamentos faciais masculinos. </strong></p>
             </div>
         </div>
       
